--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+
+}
 body {
   font-family: 'Alegreya', sans-serif;
   padding: 0;
   margin: 0;
 }
 header {
+  font-family: 'Alegreya', sans-serif;
   background-color: #52637B;
   text-align: center;
   color: white;
@@ -25,11 +28,13 @@ h1 {
   float: left;
 }
 #nav {
+  font-family: 'Alegreya', sans-serif;
   margin-left: 6%;
   width: 15%;
   padding-right: 3%;
 }
 #mainContent {
+  font-family: 'Alegreya', sans-serif;
   width: 50%;
   border-left-style: solid;
   border-left-width: 5px;
@@ -45,6 +50,7 @@ h1 {
   padding-right: 1%;
 }
 #rightSidebar {
+  font-family: 'Alegreya', sans-serif;
   width: 17%;
   padding-left: .5%;
 }
