--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
 }
 h1 {
   letter-spacing: 7px;
-  font-size: 4em;
+  font-size: 65px;
   font-family: 'Lora', serif;
   border-bottom-width: 2px;
   border-bottom-style: solid;
